--- a/cf-brooklyn-servicebroker/build.gradle
+++ b/cf-brooklyn-servicebroker/build.gradle
@@ -44,14 +44,26 @@ repositories {
 
 configurations {
 	providedRuntime
+	//all*.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
 }
 
+//configurations.all { 
+//	resolutionStrategy.force "ch.qos.logback:logback-classic:1.0.7"
+//}
+
 dependencies {
+
 	compile("org.springframework.boot:spring-boot-starter")
-	testCompile("org.springframework.boot:spring-boot-starter-test")
-	compile("org.cloudfoundry:spring-boot-cf-service-broker:${springBootCfServiceBrokerVersion}")
+	testCompile("org.springframework.boot:spring-boot-starter-test") 
+	compile("org.cloudfoundry:spring-boot-cf-service-broker:${springBootCfServiceBrokerVersion}"){
+		//exclude module: "jackson-core"
+	}
 	testCompile("org.cloudfoundry:spring-boot-cf-service-broker-tests:${springBootCfServiceBrokerVersion}")
 	testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+	compile("io.brooklyn:brooklyn-rest-client:0.7.0-M1"){
+		exclude module: "slf4j-log4j12"
+		exclude module: "jetty-server"
+	}
 }
 
 task wrapper(type: Wrapper) {
