--- a/cf-brooklyn-servicebroker/application.properties
+++ b/cf-brooklyn-servicebroker/application.properties
@@ -1,4 +1,6 @@
-brooklyn.uri=http://127.0.0.1
+brooklyn.uri=127.0.0.1
 brooklyn.port=8081
+brooklyn.username=admin
+brooklyn.password=password
 
 security.user.password=simple-password
