fix issues with deploying app to CF

--- a/cf-brooklyn-servicebroker/application.properties
+++ b/cf-brooklyn-servicebroker/application.properties
@@ -1,6 +1,7 @@
+#brooklyn.uri=https://demo.compose.canopy-cloud.com
+#brooklyn.port=443
+#brooklyn.username=darren
+#brooklyn.password=Canopy1!
 brooklyn.uri=http://127.0.0.1
 brooklyn.port=8081
-brooklyn.username=admin
-brooklyn.password=password
-
 security.user.password=simple-password
