--- a/cf-brooklyn-servicebroker/build.gradle
+++ b/cf-brooklyn-servicebroker/build.gradle
@@ -58,12 +58,14 @@ dependencies {
 	compile("org.cloudfoundry:spring-boot-cf-service-broker:${springBootCfServiceBrokerVersion}"){
 		//exclude module: "jackson-core"
 	}
+	compile("org.springframework.boot:spring-boot-starter-data-mongodb:${springBootVersion}")
 	testCompile("org.cloudfoundry:spring-boot-cf-service-broker-tests:${springBootCfServiceBrokerVersion}")
 	testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
 	compile("org.apache.brooklyn:brooklyn-rest-client:0.7.0-SNAPSHOT"){
 		exclude module: "slf4j-log4j12"
 		exclude module: "jetty-server"
 	}
+	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 	compile('commons-codec:commons-codec:1.10')
 	
 }
