--- a/cf-brooklyn-example-mongo/pom.xml
+++ b/cf-brooklyn-example-mongo/pom.xml
@@ -24,6 +24,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.basho.riak</groupId>
+			<artifactId>riak-client</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
