--- a/cf-brooklyn-example-mongo/src/main/webapp/WEB-INF/web.xml
+++ b/cf-brooklyn-example-mongo/src/main/webapp/WEB-INF/web.xml
@@ -10,8 +10,18 @@
   	<servlet-class>io.brooklyn.cf.example.mongo.MongoServlet</servlet-class>
   </servlet>
   
+    <servlet>
+  	<servlet-name>Riak Example</servlet-name>
+  	<servlet-class>io.brooklyn.cf.example.riak.RiakServlet</servlet-class>
+  </servlet>
+  
   <servlet-mapping>
   	<servlet-name>Mongo Example</servlet-name>
-  	<url-pattern>/</url-pattern>
+  	<url-pattern>/mongo</url-pattern>
+  </servlet-mapping>
+  
+    <servlet-mapping>
+  	<servlet-name>Riak Example</servlet-name>
+  	<url-pattern>/riak</url-pattern>
   </servlet-mapping>
 </web-app>
